# JupyterSineWave

./: README.md  pyproject.toml  requirements.txt
my_pyacastudy/: audio_func_lib.py  audio_math_lib.py  compute_pitch.py
source/: __compute__pitch.py  pyvenv.cfg
source/Scripts/: activate  activate.bat
tests/: test_pitch_check.py
