[tool.poetry]
name = "my-pyacastudy"
version = "0.1.0"
description = ""
authors = ["Felype <felype.vg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyACA = "^0.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
